# Data_Ingestion_by_Cloud_Run_Functions

./: .gitignore  README.md  cloudbuild.yaml  main.py  pyproject.toml  requirements.txt
